# parallelism

./: .gitignore  CMakeLists.txt  README.md  default.nix  package.nix
src/: main.cpp
